src/objects/Email__c.object
<CustomObject>
    <description>Object used by workflow to send out email messages.</description>
    <fields>
        <fullName>Exam_Name__c</fullName>
        <label>Exam Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link__c</fullName>
        <description>Used to store link to the exam.</description>
        <label>Link</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Recipient_Name__c</fullName>
        <description>Used to store the name of the recipient. This custom field is only used for the following email workflows: alert_on_new_exam and alert_on_new_top_score</description>
        <label>Recipient Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient__c</fullName>
        <description>Used to store the recipient&apos;s email address.</description>
        <label>Recipient</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Result__c</fullName>
        <label>Result</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sender_Name__c</fullName>
        <label>Sender Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sender__c</fullName>
        <description>Used to store the sender&apos;s email address</description>
        <label>Sender</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Template__c</fullName>
        <label>Template</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Top_Scorer__c</fullName>
        <label>Top Scorer</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Email</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>E-{00000}</displayFormat>
        <label>Email Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Emails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>